Changes made by P G (aphotongame@gmail.com).

--- a/Vybe/index.html
+++ b/Vybe/index.html
@@ -59,10 +59,10 @@
                         </label>
                     </li>
                     <li>
-                        <label>
+                        <!--label>
                             Password
                                 <input type="password" data-bind="value: password" />
-                        </label>
+                        </label-->
                     </li>
                 </ul>
 
